--- a/apps/base/authentik/release/helmrelease.yaml
+++ b/apps/base/authentik/release/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
       redis:
         host: authentik-dragonfly
       postgresql:
-        host: authentik-postgres
+        host: authentik-postgres-rw
     server:
       autoscaling:
         enabled: true
