--- a/apps/base/authentik/data/database.yaml
+++ b/apps/base/authentik/data/database.yaml
@@ -7,6 +7,7 @@ spec:
   managed:
     roles:
       - name: authentik
+        login: true
         passwordSecret:
           name: authentik-postgres
   storage:
