--- a/clusters/homelab/repos/oci/envoy-gateway.yaml
+++ b/clusters/homelab/repos/oci/envoy-gateway.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
-  name: dragonfly-operator
+  name: envoy-gateway
   namespace: flux-system
 spec:
   interval: 30m
