--- a/apps/base/dragonfly-operator/release/helmrelease.yaml
+++ b/apps/base/dragonfly-operator/release/helmrelease.yaml
@@ -10,7 +10,7 @@ spec:
   interval: 15m
   values:
     serviceMonitor:
-      enabled: true
+      enabled: false
     grafanaDashboard:
       enabled: true
       folder: databases
