--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
     persistence:
       enabled: false
     serviceMonitor:
-      enabled: true
+      enabled: false
     env:
       GATUS_CONFIG_PATH: /config/config.yaml
     sidecarContainers:
