--- a/apps/base/cloudflare-tunnel/monitoring/monitors.yaml
+++ b/apps/base/cloudflare-tunnel/monitoring/monitors.yaml
@@ -1,5 +1,5 @@
 apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
+kind: VMServiceScrape
 metadata:
   name: &app cloudflare-tunnel 
 spec:
