--- a/apps/base/grafana-operator/grafana/monitors.yaml
+++ b/apps/base/grafana-operator/grafana/monitors.yaml
@@ -1,4 +1,4 @@
-apiVersion: monitoring.coreos.com/v1
+apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMServiceScrape
 metadata:
   name: &app grafana-operator
