--- a/apps/base/longhorn/monitoring/monitors.yaml
+++ b/apps/base/longhorn/monitoring/monitors.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: monitoring.coreos.com/v1
+apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMServiceScrape
 metadata:
   name: &app longhorn
