--- a/apps/base/cloudflare-tunnel/kustomize.yaml
+++ b/apps/base/cloudflare-tunnel/kustomize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cloudflare-tunnel
   namespace: flux-system
 spec:
-  targetNamespace: cloudflare-tunnel
+  targetNamespace: network
   commonMetadata:
     labels:
       service: cloudflare-tunnel
