--- a/apps/base/envoy-gateway/kustomize.yaml
+++ b/apps/base/envoy-gateway/kustomize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: &app envoy-gateway
   namespace: flux-system
 spec:
-  targetNamespace: *app
+  targetNamespace: network
   commonMetadata:
     labels:
       service: *app
@@ -15,4 +15,37 @@ spec:
     kind: GitRepository
     name: flux-system
 ---
-
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: envoy-gateway-monitoring
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: envoy-gateway
+  interval: 5m
+  path: ./apps/base/envoy-gateway/monitoring
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: envoy-gateway-network
+  namespace: flux-system
+spec:
+  targetNamespace: network
+  commonMetadata:
+    labels:
+      service: envoy-gateway
+  interval: 5m
+  path: ./apps/base/envoy-gateway/network
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
