--- a/clusters/homelab/apps/network/kustomization.yaml
+++ b/clusters/homelab/apps/network/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../apps/base/cloudflare-tunnel/kustomize.yaml
   - ../../../../apps/base/external-dns/kustomize.yaml
+  - ../../../../apps/base/envoy-gateway/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
