--- a/apps/base/envoy-gateway/network/gateways.yaml
+++ b/apps/base/envoy-gateway/network/gateways.yaml
@@ -18,3 +18,10 @@ metadata:
   name: envoy-internal
 spec:
   gatewayClassName: envoy
+  listeners:
+    - name: http
+      protocol: HTTP
+      port: 80
+      allowedRoutes:
+        namespaces:
+          from: Same
