move authentik dashboard resource

--- a/apps/base/authentik/kustomize.yaml
+++ b/apps/base/authentik/kustomize.yaml
@@ -44,7 +44,7 @@ metadata:
   name: authentik-monitoring
   namespace: flux-system
 spec:
-  targetNamespace: authentik
+  targetNamespace: observability
   commonMetadata:
     labels:
       service: authentik
