--- a/apps/base/gatus/release/clusterrole.yaml
+++ b/apps/base/gatus/release/clusterrole.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: gatus-sidecar
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -28,5 +23,5 @@ roleRef:
   name: gatus-sidecar
 subjects:
   - kind: ServiceAccount
-    name: gatus-sidecar
+    name: gatus
     namespace: gatus
