--- a/clusters/homelab/apps/observability/kustomization.yaml
+++ b/clusters/homelab/apps/observability/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../../apps/base/victoria-metrics-k8s-stack/kustomize.yaml
+  - ../../../../apps/base/victoria-logs/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
