--- a/apps/base/grafana-operator/grafana/datasources.yaml
+++ b/apps/base/grafana-operator/grafana/datasources.yaml
@@ -42,6 +42,28 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
+  name: victoria-logs
+spec:
+  uid: victoria-logs
+  datasource:
+    name: VictoriaLogs
+    type: &datasource victoriametrics-logs-datasource
+    jsonData:
+      timeInterval: 5s
+      tlsSkipVerify: true
+    url: http://vlselect-vlc-victoria-logs-cluster:9471/select/0/prometheus
+    access: proxy
+    basicAuth: false
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  plugins:
+    - name: *datasource
+      version: 0.21.4
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
+metadata:
   name: github
 spec:
   valuesFrom:
@@ -91,3 +113,5 @@ spec:
   plugins:
     - name: yesoreyeram-infinity-datasource
       version: 3.6.0
+---
+
