--- a/apps/base/spegel/release/helmrelease.yaml
+++ b/apps/base/spegel/release/helmrelease.yaml
@@ -23,3 +23,5 @@ spec:
         folder: System
     serviceMonitor:
       enabled: false
+    spegel:
+      containerdRegistryConfigPath: /etc/cri/conf.d/hosts
