add vmks dashboards with grafana crds

--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -53,6 +53,15 @@ spec:
     # Include dashboards from chart
     defaultDashboards:
       enabled: true
+      grafanaOperator:
+        # -- Create dashboards as CRDs (requires grafana-operator to be installed)
+        enabled: true
+        spec:
+          instanceSelector:
+            matchLabels:
+              dashboards: homelab
+          folderRef: kubernetes
+          allowCrossNamespaceImport: false
       dashboards:
         victoriametrics-vmalert:
           enabled: true
