--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -61,6 +61,9 @@ spec:
             matchLabels:
               dashboards: homelab
           folderRef: kubernetes
+          datasources:
+            - datasourceName: prometheus
+              inputName: datasource
           allowCrossNamespaceImport: false
       dashboards:
         victoriametrics-vmalert:
