--- a/apps/base/longhorn/monitoring/dashboard.yaml
+++ b/apps/base/longhorn/monitoring/dashboard.yaml
@@ -10,6 +10,6 @@ spec:
   folderRef: storage
   datasources:
     - datasourceName: prometheus
-      inputName: datasource
+      inputName: DS_PROMETHEUS
   grafanaCom:
     id: 16888
