--- a/apps/base/victoria-logs/release/helmrelease.yaml
+++ b/apps/base/victoria-logs/release/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
   interval: 15m
   values:
     remoteWrite:
-      - url: http:/vlc-victoria-logs-cluster-vlinsert:9481/insert/jsonline
+      - url: http://vlc-victoria-logs-cluster-vlinsert:9481
         extraFields:
           cluster: homelab
           job: victoria-logs-collector
