--- a/apps/base/grafana-operator/grafana/datasources.yaml
+++ b/apps/base/grafana-operator/grafana/datasources.yaml
@@ -138,4 +138,18 @@ spec:
     - name: yesoreyeram-infinity-datasource
       version: 3.6.0
 ---
-
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
+metadata:
+  name: strava
+spec:
+  uid: strava
+  datasource:
+    name: Strava
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  plugins:
+    - name: grafana-strava-datasource
+      version: 1.7.2
+---
