--- a/apps/base/victoria-logs/kustomize.yaml
+++ b/apps/base/victoria-logs/kustomize.yaml
@@ -14,3 +14,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app victoria-logs-storage
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - victoria-logs-cluster
+  interval: 5m
+  path: ./apps/base/victoria-logs/storage
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
