--- a/apps/base/media/storage/externalsecrets.yaml
+++ b/apps/base/media/storage/externalsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: jellyfin-postgres
+  name: jellyseerr-postgres
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -17,10 +17,36 @@ spec:
   data:
   - secretKey: username
     remoteRef:
-      key: jellyfin-postgres
+      key: jellyseerr-postgres
       property: username
   - secretKey: password
     remoteRef:
-      key: jellyfin-postgres
+      key: jellyseerr-postgres
+      property: password
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: jellystat-postgres
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Owner
+    # this is how the Kind=Secret will look like
+    template:
+      data:
+        username: "{{ .username }}"
+        password: "{{ .password }}"
+
+  data:
+  - secretKey: username
+    remoteRef:
+      key: jellystat-postgres
+      property: username
+  - secretKey: password
+    remoteRef:
+      key: jellystat-postgres
       property: password
 ---
