--- a/apps/base/media/kustomize.yaml
+++ b/apps/base/media/kustomize.yaml
@@ -18,7 +18,45 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app media
+  name: &app jellyfin
+  namespace: flux-system
+spec:
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: media-storage
+  interval: 5m
+  path: ./apps/base/media/jellyfin
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app jellyseerr
+  namespace: flux-system
+spec:
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: media-storage
+  interval: 5m
+  path: ./apps/base/media/jellyseerr
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app jellystat
   namespace: flux-system
 spec:
   targetNamespace: media
@@ -26,7 +64,7 @@ spec:
     labels:
       service: *app
   interval: 5m
-  path: ./apps/base/media/release
+  path: ./apps/base/media/jellystat
   prune: true
   sourceRef:
     kind: GitRepository
