--- a/apps/base/kube-ops-view/release/helmrelease.yaml
+++ b/apps/base/kube-ops-view/release/helmrelease.yaml
@@ -1,15 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: kube-cats
-  namespace: kube-cats
+  name: &app kube-ops-view
 spec:
   chart:
     spec:
-      chart: kube-cats
+      chart: *app
       sourceRef:
         kind: HelmRepository
         name: j6nca
         namespace: flux-system
-      version: 1.0.6
+      version: 1.0.0
   interval: 15m
