--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -170,3 +170,15 @@ spec:
           url: https://secrets.j6n.dev
           conditions:
             - "[STATUS] <= 299"
+        - name: j6n.dev
+          group: Domains
+          url: https://meow.j6n.dev
+          interval: 24h
+          conditions:
+            - "[DOMAIN_EXPIRATION] <= 720h"
+        - name: j6n.ca
+          group: Domains
+          url: https://j6n.ca
+          interval: 24h
+          conditions:
+            - "[DOMAIN_EXPIRATION] <= 720h"
