--- a/apps/base/media/jellystat/helmrelease.yaml
+++ b/apps/base/media/jellystat/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
             ports:
-              - containerPort: 3000
+              - containerPort: &port 3000
                 name: http
                 protocol: TCP
     defaultPodOptions:
