--- a/clusters/homelab/apps/observability/kustomization.yaml
+++ b/clusters/homelab/apps/observability/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../../../apps/base/victoria-metrics-k8s-stack/kustomize.yaml
   - ../../../../apps/base/victoria-logs/kustomize.yaml
   - ../../../../apps/base/prometheus-json-exporter/kustomize.yaml
+  - ../../../../apps/base/prometheus-snmp-exporter/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
