--- a/apps/base/lubelogger/release/helmrelease.yaml
+++ b/apps/base/lubelogger/release/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
           app:
             image:
               repository: ghcr.io/hargata/lubelogger
-              tag: 1.5.5
+              tag: v1.5.5
             env:
               LOG_LEVEL: "info"
               TZ: America/Toronto
