--- a/apps/base/media/storage/database.yaml
+++ b/apps/base/media/storage/database.yaml
@@ -14,6 +14,10 @@ spec:
         login: true
         passwordSecret:
           name: jellystat-postgres
+      - name: sonarr
+        login: true
+        passwordSecret:
+          name: sonarr-postgres
   storage:
     storageClass: longhorn
     size: 5Gi
@@ -36,5 +40,15 @@ spec:
   cluster: 
     name: media-postgres
   name: &app jellystat
+  owner: *app
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Database
+metadata:
+  name: sonarr-postgres
+spec:
+  cluster: 
+    name: media-postgres
+  name: &app sonarr
   owner: *app
 ---
