--- a/apps/base/media/kustomize.yaml
+++ b/apps/base/media/kustomize.yaml
@@ -90,3 +90,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app radarr
+  namespace: flux-system
+spec:
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: media-storage
+  interval: 5m
+  path: ./apps/base/media/radarr
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
