--- a/apps/base/media/radarr/helmrelease.yaml
+++ b/apps/base/media/radarr/helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app sonarr
+  name: &app radarr
 spec:
   chartRef:
     kind: OCIRepository
@@ -15,26 +15,26 @@ spec:
         containers:
           app:
             image:
-              repository: linuxserver/sonarr
-              tag: 4.0.16
+              repository: linuxserver/radarr
+              tag: 6.0.4
             env:
-              SONARR__APP__INSTANCENAME: Sonarr
-              SONARR__APP__THEME: dark
-              SONARR__AUTH__METHOD: External
-              SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              SONARR__LOG__DBENABLED: "False"
-              SONARR__LOG__LEVEL: info
-              SONARR__POSTGRES__HOST: "media-postgres-rw"
-              SONARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
-              SONARR__POSTGRES__PASSWORD:
+              RADARR__APP__INSTANCENAME: Radarr
+              RADARR__APP__THEME: dark
+              RADARR__AUTH__METHOD: External
+              RADARR__AUTH__REQUIRED: DisabledForLocalAddresses
+              RADARR__LOG__DBENABLED: "False"
+              RADARR__LOG__LEVEL: info
+              RADARR__POSTGRES__HOST: "media-postgres-rw"
+              RADARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
+              RADARR__POSTGRES__PASSWORD:
                 valueFrom:
                   secretKeyRef:
                     name: "{{ .Release.Name }}-postgres"
                     key: password
-              SONARR__POSTGRES__PORT: "5432"
-              SONARR__POSTGRES__USER: "{{ .Release.Name }}"
-              SONARR__SERVER__PORT: &port 8989
-              SONARR__UPDATE__BRANCH: develop
+              RADARR__POSTGRES__PORT: "5432"
+              RADARR__POSTGRES__USER: "{{ .Release.Name }}"
+              RADARR__SERVER__PORT: &port 7878
+              RADARR__UPDATE__BRANCH: develop
               TZ: America/Toronto
             envFrom:
               - secretRef:
