--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -24,13 +24,12 @@ spec:
     serviceMonitor:
       enabled: false
     env:
-      GATUS_CONFIG_PATH: /dynamic-config/config.yaml
+      GATUS_CONFIG_PATH: /dynamic-config/gatus-sidecar.yaml
     sidecarContainers:
       gatus-sidecar:
         image: ghcr.io/home-operations/gatus-sidecar:0.0.9
         args:
-          - --auto-httproute
-          - --auto-ingress
+          - --enable-service
           - --auto-service
           - --output=/dynamic-config/gatus-sidecar.yaml
         volumeMounts:
