--- a/apps/base/karma/release/kustomization.yaml
+++ b/apps/base/karma/release/kustomization.yaml
@@ -2,3 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
+configMapGenerator:
+  - name: karma-config
+    files:
+      - karma.yaml=./config/karma.yaml
+generatorOptions:
+  disableNameSuffixHash: true
