fix sonarr config

--- a/apps/base/media/sonarr/helmrelease.yaml
+++ b/apps/base/media/sonarr/helmrelease.yaml
@@ -43,19 +43,19 @@ spec:
               - containerPort: *port
                 name: http
                 protocol: TCP
-        initContainers:
-          gluetun:
-            image:
-              repository: ghcr.io/qdm12/gluetun
-              tag: v3.40.0
-            env:
-            envFrom:
-              - secretRef:
-                  name: "gluetun-secret"
-            securityContext:
-              capabilities:
-                add: ["NET_ADMIN"]
-            restartPolicy: Always
+        # initContainers:
+        #   gluetun:
+        #     image:
+        #       repository: ghcr.io/qdm12/gluetun
+        #       tag: v3.40.3
+        #     envFrom:
+        #       - secretRef:
+        #           name: "gluetun-secret"
+        #     securityContext:
+        #       capabilities:
+        #         add: ["NET_ADMIN"]
+        #     # Keep gluetun running for the duration of the pod
+        #     restartPolicy: Always
 
     defaultPodOptions:
       securityContext:
@@ -80,6 +80,8 @@ spec:
         storageClass: longhorn
         size: 500Mi
         accessMode: ReadWriteOnce
+      gluetun:
+        type: emptyDir
       media:
         type: nfs
         server: nasj6n.home
