--- a/apps/base/media/gluetun/externalsecrets.yaml
+++ b/apps/base/media/gluetun/externalsecrets.yaml
@@ -12,6 +12,7 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
+        DNS_KEEP_NAMESERVER: on
         VPN_SERVICE_PROVIDER: airvpn
         VPN_TYPE: wireguard
         # Mandatory, airvpn forwarded port
